[package]
name = "turnwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

#penrose net-build
penrose = "0.3.4"
penrose_ui = "0.3.4"
rofi = "0.4.0"

