[package]
name = "turnwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

#penrose net-build
penrose = { path = "/home/turn/Program/penrose" }
penrose_ui = { path = "/home/turn/Program/penrose/crates/penrose_ui" }
rofi = "0.4.0"

